Changed POST /story to POST /miner/:miner_id/story
