# api/swagger/swagger.yaml
@@ -47,51 +47,6 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    post:
-      description: Miners use this route to insert new enriched stories into the system
-      operationId: insertNewStories
-      parameters:
-        - name: newStory
-          in: body
-          description: The name of the person to whom to say hello
-          required: true
-          schema: 
-            type: array
-            items:
-              $ref: "#/definitions/InsertStory"
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/SuccessResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    patch:
-      description: To upvote or downvote a story
-      operationId: voteOnStory
-      parameters:
-        - name: story_id
-          in: query
-          description: the id of the story to upvote or downvote on
-          required: true
-          type: string
-        - name: upvote
-          in: query
-          description: upvote a story, if it is false then downvote a story
-          required: true
-          type: boolean
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/Story"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /miners:
     x-swagger-router-controller: miners
     get:
@@ -162,6 +117,65 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/Miner"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /miners/{miner_id}/story:
+    x-swagger-router-controller: miners
+    post:
+      description: Miners use this route to insert new enriched stories into the system
+      operationId: insertNewStories
+      parameters:
+        - name: miner_id
+          in: path
+          description: the id of the miner this story belongs to
+          required: true
+          type: string
+        - name: newStory
+          in: body
+          description: The name of the person to whom to say hello
+          required: true
+          schema: 
+            type: array
+            items:
+              $ref: "#/definitions/InsertStory"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /miners/{miner_id}/story/{story_id}:
+    x-swagger-router-controller: miners
+    patch:
+      description: To upvote or downvote a story
+      operationId: voteOnStory
+      parameters:
+        - name: miner_id
+          in: path
+          description: the id of the miner this story belongs to
+          required: true
+          type: string
+        - name: story_id
+          in: path
+          description: the id of the story to upvote or downvote on
+          required: true
+          type: string
+        - name: upvote
+          in: query
+          description: upvote a story, if it is false then downvote a story
+          required: true
+          type: boolean
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Story"
         default:
           description: Error
           schema:
